--- a/src/css-init/animation-glitch.css
+++ b/src/css-init/animation-glitch.css
@@ -61,3 +61,22 @@
     opacity: 1;
   }
 }
+
+
+
+@media screen and (max-width: 768px) {
+  .glitch-text {
+    font-size: 40px;
+   
+  }
+
+}
+@media screen and (min-width: 380px) and (max-width: 480px) {
+  .glitch-text {
+    font-size: 20px;
+   
+  }
+
+
+  
+}
