--- a/src/css-init/index.css
+++ b/src/css-init/index.css
@@ -8,7 +8,6 @@ body {
     background-color: #F5F5DC;
 }
 
-/* navbar */
 header {
     width: 100%;
 }
@@ -29,21 +28,22 @@ h1, h2 {
 }
 
 .img-cat {
-    width: 60px; /* Corrigi o erro de "60x" para 60px */
+    width: 60px; 
     height: 60px;
     margin-right: 20px;
-    display: inline-block; /* Garante que a imagem fique na mesma linha do texto */
-    vertical-align: middle; /* Alinha a imagem ao meio do texto */
+    display: inline-block; 
+    vertical-align: middle; 
 }
 
 .paw-image {
     width: 60px;
     height: 60px;
     margin-right: 20px;
-    display: inline-block; /* Garante que a imagem fique na mesma linha do texto */
-    vertical-align: middle; /* Alinha a imagem ao meio do texto */
+    display: inline-block; 
+    vertical-align: middle; 
 }
 
+/* Navbar */
 .nav-bar {
     display: flex;  
     justify-content: space-between;
@@ -58,6 +58,23 @@ h1, h2 {
     width: 100%;
     height: 50px;
 }
+
+.menu-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 25px;
+    height: 18px;
+    cursor: pointer;
+    display: none;
+}
+
+.menu-icon div {
+    height: 4px;
+    background-color: #f4f4f4;
+    border-radius: 2px;
+}
+
 
 .marking {
     display: flex;
@@ -93,8 +110,9 @@ h1, h2 {
 
 .login:hover {
     color: black;
-    background-color: #fff;
+    background-color: #b9936c;
 }
+
 
 /* container */
 .container {
@@ -216,9 +234,9 @@ h1, h2 {
     background: linear-gradient(#e9e9cb, #F5F5DC);
     color: #333;
     padding: 20px;
-    width: 500px;
-    height: 500px;
-    min-height: 21em; 
+    width: 18em;
+    height: 550px;
+   
  
    
     display: flex;
